crates/ars-components/src/specialized/signature_pad/snapshots/ars_components__specialized__signature_pad__tests__snapshot_canvas_focused.snap
---
source: crates/ars-components/src/specialized/signature_pad/mod.rs
expression: snapshot_attrs(&api.canvas_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "canvas",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "signature-pad",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Signature pad",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "sig-label",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "sig-canvas",
            ),
        ),
        (
            Role,
            String(
                "application",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
