crates/ars-components/src/specialized/signature_pad/snapshots/ars_components__specialized__signature_pad__tests__snapshot_clear_trigger_empty.snap
---
source: crates/ars-components/src/specialized/signature_pad/mod.rs
expression: "snapshot_attrs(&empty_api(State::Idle).clear_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "clear-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "signature-pad",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Clear signature",
            ),
        ),
        (
            Id,
            String(
                "sig-clear",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
