crates/ars-components/src/specialized/signature_pad/snapshots/ars_components__specialized__signature_pad__tests__snapshot_hidden_input.snap
---
source: crates/ars-components/src/specialized/signature_pad/mod.rs
expression: "snapshot_attrs(&filled_api(State::Completed).hidden_input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "signature-pad",
            ),
        ),
        (
            Name,
            String(
                "signature",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "M0.0,0.0 L1.0,1.0",
            ),
        ),
    ],
    styles: [],
}
